# openevolve

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.github/instructions/: sidebar-node-logic.instructions.md
.github/workflows/: python-lint.yml  python-test.yml
configs/: default_config.yaml  island_config_example.yaml  matrix_multiplication_config.yaml  min_max_distance_config.yaml
examples/circle_packing/: README.md  config.yaml  evaluator.py  initial_program.py  plateau_config.yaml
examples/circle_packing_with_artifacts/: README.md  evaluator.py
examples/function_minimization/: README.md  config.yaml  evaluator.py  initial_program.py
examples/matrix_multiplication/: README.md  evaluate.py  initial_program.py  optimize.py  requirements.txt
examples/min_max_distance/: evaluate.py  initial_program.py  optimize.py  visualize.py
examples/symbolic_regression/: README.md  data_api.py  eval.py
openevolve/: __init__.py  cli.py  config.py  controller.py  database.py  evaluation_result.py  evaluator.py
openevolve/llm/: __init__.py  base.py  ensemble.py  openai.py
openevolve/prompt/: __init__.py  sampler.py  templates.py
openevolve/utils/: __init__.py  async_utils.py  code_utils.py  format_utils.py  hyper.py  metrics_utils.py
scripts/: visualizer.py
scripts/lm_eval/: README.md  config.yml  evaluator_stub.py  lm-eval.py
tests/: test_artifacts.py  test_artifacts_integration.py  test_basic.py  test_checkpoint_resume.py  test_database.py  test_llm_ensemble.py  test_prompt_sampler.py  test_valid_configs.py
(+9 files in other folders)
